--- a/package.json
+++ b/package.json
@@ -4,19 +4,23 @@
   "license": "GPL-2.0-or-later",
   "main": "build/index.js",
   "dependencies": {
-    "npm-check-updates": "^11.8.3"
+    "npm-check-updates": "^12.5.9"
   },
   "devDependencies": {
-    "@wordpress/scripts": "^18.0.0",
+    "@wordpress/scripts": "^22.5.0",
     "po2json": "^1.0.0-beta-2"
   },
   "scripts": {
     "build": "wp-scripts build",
     "check-engines": "wp-scripts check-engines",
     "check-licenses": "wp-scripts check-licenses",
+    "format": "wp-scripts format",
     "lint:css": "wp-scripts lint-style",
     "lint:js": "wp-scripts lint-js",
+    "lint:md:docs": "wp-scripts lint-md-docs",
     "lint:pkg-json": "wp-scripts lint-pkg-json",
+    "packages-update": "wp-scripts packages-update",
+    "plugin-zip": "wp-scripts plugin-zip",
     "start": "wp-scripts start",
     "test:e2e": "wp-scripts test-e2e",
     "test:unit": "wp-scripts test-unit-js",
