--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@wordpress/scripts": "^23.4.0",
+	"dir-archiver": "^1.2.0",
     "po2json": "^1.0.0-beta-2"
   },
   "scripts": {
@@ -24,6 +25,7 @@
     "start": "wp-scripts start",
     "test:e2e": "wp-scripts test-e2e",
     "test:unit": "wp-scripts test-unit-js",
+	"bundle": "dir-archiver --src . --dest ../rather-simple-carousel.zip --exclude .git .gitattributes .gitignore node_modules package-lock.json package.json",
     "i18n": "po2json languages/rather-simple-carousel-es_ES.po languages/rather-simple-carousel-es_ES-rather-simple-carousel-block.json -f jed"
   }
 }
